examples/test/testpolicy19784.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19784
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key16: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value6
          key30: value15
          key36: value18
      podSelector:
        matchLabels:
          key46: value34
